[gd_scene load_steps=10 format=3 uid="uid://ditcwds6nu8ga"]

[ext_resource type="Script" path="res://Scripts/soilderUpdatePanel.gd" id="1_gnfkv"]
[ext_resource type="Theme" uid="uid://bklmr3xmk4m5u" path="res://global_theme.tres" id="2_3ru2r"]
[ext_resource type="PackedScene" uid="uid://dxj1s2d4grxwj" path="res://Scene/prefab/SoilderItem.tscn" id="2_7lggh"]
[ext_resource type="Resource" uid="uid://d2qoinuor12dq" path="res://dialogues/演武场.dialogue" id="2_qb106"]
[ext_resource type="FontFile" uid="uid://to00njkwmxts" path="res://Asset/Font/1_sim.ttf" id="4_xp2li"]
[ext_resource type="Texture2D" uid="uid://bnxitska4niyt" path="res://Asset/人物/关羽close.png" id="5_v4w5d"]
[ext_resource type="Texture2D" uid="uid://dgglf6m4jn2uc" path="res://Asset/人物/张飞open.png" id="6_gphpq"]
[ext_resource type="Texture2D" uid="uid://dahuc8gb2blc" path="res://Asset/other/0_red.png" id="7_eqiyi"]
[ext_resource type="Texture2D" uid="uid://cwa6dylndnoey" path="res://Asset/人物/赵云close.png" id="7_ib6jt"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -7.0
offset_right = -4.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gnfkv")
dialogue_resource = ExtResource("2_qb106")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1408.0
offset_top = -884.0
offset_right = 1584.0
offset_bottom = 728.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -644.0
offset_top = -404.0
offset_right = 605.0
offset_bottom = 418.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.974243)
pivot_offset = Vector2(630.615, 267.699)
theme = ExtResource("2_3ru2r")

[node name="orderPanel" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/orderPanel"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_xp2li")
theme_override_font_sizes/font_size = 50
text = "请选择你的武将进行练兵
（练兵有一定概率提升武将等级）"
autowrap_mode = 2

[node name="Control3" type="Control" parent="PanelContainer/orderPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 9.5)
layout_mode = 2
size_flags_vertical = 6

[node name="orderVbox" type="HBoxContainer" parent="PanelContainer/orderPanel/VBoxContainer"]
custom_minimum_size = Vector2(7.405, 447.98)
layout_mode = 2

[node name="Control_1" parent="PanelContainer/orderPanel/VBoxContainer/orderVbox" instance=ExtResource("2_7lggh")]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
headImg = ExtResource("5_v4w5d")
namelv = "关羽:lv1"
repImg = 1

[node name="Control_2" parent="PanelContainer/orderPanel/VBoxContainer/orderVbox" instance=ExtResource("2_7lggh")]
custom_minimum_size = Vector2(399, 0)
layout_mode = 2
headImg = ExtResource("6_gphpq")
namelv = "张飞:lv1"
repImg = 2

[node name="Control_3" parent="PanelContainer/orderPanel/VBoxContainer/orderVbox" instance=ExtResource("2_7lggh")]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
headImg = ExtResource("7_ib6jt")
namelv = "赵云：lv1"

[node name="Control2" type="Control" parent="PanelContainer/orderPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 44.12)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_xp2li")
theme_override_font_sizes/font_size = 36
autowrap_mode = 2

[node name="Control" type="Control" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="PanelContainer/orderPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Button" type="Button" parent="PanelContainer/orderPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "升级"

[node name="Control3" type="Control" parent="PanelContainer/orderPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 580.0
offset_top = -459.0
offset_right = 644.0
offset_bottom = -395.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7_eqiyi")
texture_pressed = ExtResource("7_eqiyi")
texture_hover = ExtResource("7_eqiyi")
texture_disabled = ExtResource("7_eqiyi")
texture_focused = ExtResource("7_eqiyi")
stretch_mode = 0

[connection signal="gui_input" from="PanelContainer/orderPanel/VBoxContainer/orderVbox/Control_1" to="." method="_on_control_1_gui_input"]
[connection signal="gui_input" from="PanelContainer/orderPanel/VBoxContainer/orderVbox/Control_2" to="." method="_on_control_2_gui_input"]
[connection signal="gui_input" from="PanelContainer/orderPanel/VBoxContainer/orderVbox/Control_3" to="." method="_on_control_3_gui_input"]
[connection signal="button_down" from="PanelContainer/orderPanel/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="PanelContainer/orderPanel/VBoxContainer/HBoxContainer/Button" to="." method="_on_upgrade_button_pressed"]
[connection signal="button_down" from="TextureButton" to="." method="_on_exit_button_button_down"]
